Alterações no path do .env

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,10 @@
 # BACKEND
 PORT_BACK=
-#FRONTEND
 VITE_PORT=
-
+VITE_API_URL=
 SECRET=
 SESSION_SECRET = 
 BCRYPT_ROUNDS = 
-
 #BANCO
 MYSQL_ROOT_PASSWORD=
 MYSQL_DATABASE=
