Alt. nas variáveis de ambiente

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,19 @@
 # BACKEND
 PORT_BACK=
-VITE_PORT=
-VITE_API_URL=
 SECRET=
 SESSION_SECRET = 
 BCRYPT_ROUNDS = 
+
+#FRONTEND
+VITE_PORT=
+VITE_API_URL=
+VITE_EMAILJS_PUBLIC_KEY=
+VITE_EMAILJS_TEMPLATE=
+VITE_EMAILJS_SERVICE_ID=
+VITE_APP_URL=
+
+
+
 #BANCO
 MYSQL_ROOT_PASSWORD=
 MYSQL_DATABASE=
